📝 feat(kitchen-sink): add Response Inspection API
