# internal/domain/kitchensink/response_inspection.go
@@ -1,0 +1,7 @@
+package kitchensink
+
+// ResponseInspectionResponse is a generic struct for JSON/XML responses
+type ResponseInspectionResponse struct {
+	Message string `json:"message" xml:"message"`
+	Format  string `json:"format" xml:"format"`
+}
